--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom px-3 sticky-top">
     <a class="navbar-brand ms-1" href="#">
-      <img src="img/Logo.png" alt="Bootstrap" width="68" height="46">
+      <img src="Logo.png" alt="Bootstrap" width="68" height="46">
     </a>
     <div class="container-fluid fs-5">
       <a class="navbar-brand fs-4" href="#"> <span class="text-primary">Sniper</span>Tech</a>
@@ -78,13 +78,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/w1.jpg" class="d-block w-100" alt="...">
+          <img src="w1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/w2.jpg" class="d-block w-100" alt="...">
+          <img src="w2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/w3.png" class="d-block w-100" alt="...">
+          <img src="w3.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -109,9 +109,8 @@
   <div class="row">
     <div id="ab" class="col-sm-12 col-md-6 col-lg-6 col-12 text-center mt-5 ">
       <h1>What do you want to know <span class="text-warning">?</span></h1>
-      <p class="ms-4 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni non ut dolore illum qui
-        voluptatem eveniet
-        doloribus eaque, quo impedit nulla autem architecto voluptates veniam optio ab quibusdam numquam!
+      <p class="ms-4 mb-5">I am Mechanical engineer with computer knowledge. I am from Dattawad, completed my engineering in Sharad Institute of Technology and Polytechnic, Ydrav.
+        I am fast learner and always gain new technologies in my free time.
       </p>
       <button type="button" class="btn btn-light mb-5">More About <span class="text-danger">ME</span></button>
       <div class="accordion accordion-flush ms-4 " id="accordionFlushExample">
@@ -124,8 +123,8 @@
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the first item's accordion body.
+            <div class="accordion-body">I love <code>oading</code>. I am passionate with my coading cereer. I always try to learn new skills.
+
             </div>
           </div>
         </div>
@@ -138,9 +137,8 @@
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-              filled with some actual content.
+            <div class="accordion-body">I am Diploma holder in <code> Mechanical </code>engineering and now accompished FullStack Web Developmennt
+              course. Also pursing Degree.. 
             </div>
           </div>
         </div>
@@ -153,9 +151,8 @@
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-              happening here in terms of content.
+            <div class="accordion-body">I want to be <code> Mean & Mern </code> developer. With my fast learning ability
+              i want to complete Data Science, Machine Learning , Certified Ethical Hacker and Offensive security certified professional. 
             </div>
           </div>
         </div>
@@ -164,7 +161,7 @@
 
 
     <div class="col-sm-12 col-md-6 col-lg-6 col-12 mb-5">
-      <img id="w9" class="img-fluid img-thumbnail m-auto text-end " src="img/w9.jpg">
+      <img id="w9" class="img-fluid img-thumbnail m-auto text-end " src="w9.jpg">
     </div>
 
 
@@ -174,8 +171,8 @@
       <br><br><br><br>
 
       <marquee behavior="" direction="left" scrollamount="16">
-        <img src="img/dora.gif" width="160" /><br><br><br><br><br><br><br><br><br><br><br>
-        <img src="img/tom.gif" width="160" />
+        <img src="dora.gif" width="160" /><br><br><br><br><br><br><br><br><br><br><br>
+        <img src="tom.gif" width="160" />
         <br><br>
         <br><br><br><br>
       </marquee>
@@ -193,7 +190,7 @@
       <div class="row mt-5">
         <div class="col-sm-12 col-md-4 col-lg-4 col-12">
           <div class="card" style="width: 18rem;">
-            <img src="img/kit.jpg" class="card-img-top" alt="...">
+            <img src="kit.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"> <strong>'Have a Break. Have a Kit Kat'</strong> , written by the agency's Donald
                 Gilles, can be traced
@@ -204,7 +201,7 @@
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4 col-12">
           <div class="card" style="width: 18rem;">
-            <img src="img/dairy.webp" class="card-img-top" alt="...">
+            <img src="dairy.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"> Cadbury dairy milk's main Tag line of India is <strong>"Kuch Meetha Ho
                   Jaye"</strong> meaning "Lets have something Sweet".</p>
@@ -214,7 +211,7 @@
 
         <div class="col-sm-12 col-md-4 col-lg-4 col-12">
           <div class="card" style="width: 18rem;">
-            <img src="img/5star.webp" class="card-img-top" alt="...">
+            <img src="5star.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"><strong>"Do Nothing mode"</strong> , which converts the Assistant from a helpful
                 companion to one that wants you to chill for a bit..</p>
@@ -239,7 +236,8 @@
             <div class="card-body">
               <i class="fa fa-users bg-primary p-2 text-white rounded"></i>
               <h5 class="card-title">Web Development</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Expand My Business is an award winning website design and development company in
+                India <span id="nopee">sdzhflsdfshfoeshohosdjfg</span></p>
               <a href="#" class="btn btn-primary">Free!!</a>
             </div>
           </div>
@@ -250,7 +248,8 @@
             <div class="card-body">
               <i class="fa fa-code bg-primary p-2 text-white rounded"></i>
               <h5 class="card-title">Cyber Security</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Cybersecurity solutions and risk assessment services to prevent cyber attacks and
+                meet compliance objectives..</p>
               <a href="#" class="btn btn-primary">Try Free!</a>
             </div>
           </div>
@@ -261,7 +260,8 @@
             <div class="card-body">
               <i class="fa fa-database bg-primary p-2 text-white rounded"></i>
               <h5 class="card-title">Data Analytics</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Improve your business productivity with Power BI team to get what you need from your
+                data. Power BI consulting services..</p>
               <a href="#" class="btn btn-primary">Free!!!!</a>
             </div>
           </div>
@@ -274,8 +274,9 @@
           <div class="card">
             <div class="card-body">
               <i class="fa fa-wpbeginner bg-primary p-2 text-white rounded"></i>
-              <h5 class="card-title">Web Development</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Cloud Computing.t</h5>
+              <p class="card-text">Seamlessly Monitor, Manage and Gain Visibility of Your Distributed Compute
+                Environment. Simplify and Automate Tasks.</p>
               <a href="#" class="btn btn-primary">Free!!</a>
             </div>
           </div>
@@ -285,8 +286,9 @@
           <div class="card">
             <div class="card-body">
               <i class="fa fa-server bg-primary p-2 text-white rounded"></i>
-              <h5 class="card-title">Cyber Security</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Software Development</h5>
+              <p class="card-text">Software development services help plan, design, develop, integrate, test, manage and
+                evolve software solutions..</p>
               <a href="#" class="btn btn-primary">Try Free!</a>
             </div>
           </div>
@@ -296,8 +298,9 @@
           <div class="card">
             <div class="card-body">
               <i class="fa fa-sticky-note bg-primary p-2 text-white rounded"></i>
-              <h5 class="card-title">Data Analytics</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Project Management.</h5>
+              <p class="card-text">Project management services specialize in planning, coordinating, and executing
+                projects according to specific requirements and constraints.</p>
               <a href="#" class="btn btn-primary">Free!!!!</a>
             </div>
           </div>
